--- a/for_loop.html
+++ b/for_loop.html
@@ -288,7 +288,7 @@
   <body>
     <div class="container">
       <h1>Python <code>for</code> Loop</h1>
-      <p class="subtitle">Simple for loop by default</p>
+      <p class="subtitle">For loop working</p>
 
       <div class="selection-row">
         <div class="selection-item">
@@ -307,9 +307,9 @@
           <div class="selection-heading">Control Flow</div>
           <select id="controlFlow" class="selection-select">
             <option value="simple">Simple for loop</option>
-            <option value="if">for + if (len > 3)</option>
-            <option value="ifelse_char">for + if-else (contains 'a')</option>
-            <option value="elif_len">for + if-elif-else (word length)</option>
+            <option value="if">for + if loop</option>
+            <option value="ifelse_char">for + if-else loop</option>
+            <option value="elif_len">for + if-elif-else loop</option>
           </select>
         </div>
       </div>
